//package com.example.birds_of_a_feather_team_19;
//
//
//import static androidx.test.espresso.Espresso.onData;
//import static androidx.test.espresso.Espresso.onView;
//import static androidx.test.espresso.action.ViewActions.click;
//import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static androidx.test.espresso.action.ViewActions.replaceText;
//import static androidx.test.espresso.assertion.ViewAssertions.matches;
//import static androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
//import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
//import static androidx.test.espresso.matcher.ViewMatchers.withId;
//import static androidx.test.espresso.matcher.ViewMatchers.withParent;
//import static androidx.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//import static org.hamcrest.Matchers.anything;
//import static org.hamcrest.Matchers.is;
//
//import android.content.Context;
//import android.util.Log;
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import androidx.test.core.app.ApplicationProvider;
//import androidx.test.espresso.DataInteraction;
//import androidx.test.espresso.ViewInteraction;
//import androidx.test.filters.LargeTest;
//import androidx.test.rule.ActivityTestRule;
//import androidx.test.runner.AndroidJUnit4;
//
//import com.example.birds_of_a_feather_team_19.model.db.AppDatabase;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.junit.BeforeClass;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class AddMultipleUsersTest {
//
//    @Rule
//    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);
//
//    @BeforeClass
//    public static void clearDatabase() {
//        Context context = ApplicationProvider.getApplicationContext();
//        AppDatabase db = AppDatabase.singleton(context);
//        db.userDao().deleteAll();
//        db.courseDao().deleteAll();
//        Log.d("BoF", "Database cleared");
//
////        SharedPreferences preferences = context.getSharedPreferences("BoF", Context.MODE_PRIVATE);
////        String userID = preferences.getString("UUID", null);
////
////        User testUser = new User(userID, "Team 19", "");
////        db.userDao().insert(testUser);
////
////        Course testCourse1 = new Course(userID, "2022", "winter", "cse", "110", "small");
////        Course testCourse2 = new Course(userID, "2021", "fall", "cse", "105", "small");
////        Course testCourse3 = new Course(userID, "2021", "spring", "cse", "30", "small");
////
////        db.courseDao().insert(testCourse1);
////        db.courseDao().insert(testCourse2);
////        db.courseDao().insert(testCourse3);
////
////        testMockUsers = new String[]{"Bill,,,\nhttps://lh3.googleusercontent.com/pw/AM-JKLXQ2ix4dg-PzLrPOSMOOy6M3PSUrijov9jCLXs4IGSTwN73B4kr-F6Nti_4KsiUU8LzDSGPSWNKnFdKIPqCQ2dFTRbARsW76pevHPBzc51nceZDZrMPmDfAYyI4XNOnPrZarGlLLUZW9wal6j-z9uA6WQ=w854-h924-no?authuser=0,,,\n2022,WI,CSE,110",
////                "Will,,,\n" +
////                        ",,,\n" +
////                        "2022,WI,CSE,110\n" +
////                        "2020,FA,CSE,12\n" +
////                        "2022,SP,CSE,110",
////                "Dill,,,\n" +
////                        "https://lh3.googleusercontent.com/pw/AM-JKLXQ2ix4dg-PzLrPOSMOOy6M3PSUrijov9jCLXs4IGSTwN73B4kr-F6Nti_4KsiUU8LzDSGPSWNKnFdKIPqCQ2dFTRbARsW76pevHPBzc51nceZDZrMPmDfAYyI4XNOnPrZarGlLLUZW9wal6j-z9uA6WQ=w854-h924-no?authuser=0,,,\n" +
////                        "2022,WI,CSE,110\n" +
////                        "2020,FA,CSE,12\n" +
////                        "2022,SP,CSE,110\n" +
////                        "2021,SP,CSE,30\n" +
////                        "2021,FA,CSE,105",
////                "Jill,,,\n" +
////                        ",,,\n" +
////                        "2020,FA,CSE,120\n" +
////                        "2022,SP,CSE,110"
////        };
//    }
//
//    @Test
//    public void addMultipleUsersTest2()  {
//        ViewInteraction appCompatEditText = onView(
//                allOf(withId(R.id.nameAddNameEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatEditText.perform(click());
//
//        ViewInteraction appCompatEditText2 = onView(
//                allOf(withId(R.id.nameAddNameEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatEditText2.perform(replaceText("Team 19"), closeSoftKeyboard());
//
//        ViewInteraction materialButton = onView(
//                allOf(withId(R.id.confirmAddNameButton), withText("Confirm"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        materialButton.perform(click());
//
//        ViewInteraction materialButton2 = onView(
//                allOf(withId(R.id.submitAddPhotoURLButton), withText("SUBMIT"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                1),
//                        isDisplayed()));
//        materialButton2.perform(click());
//
//        ViewInteraction appCompatSpinner = onView(
//                allOf(withId(R.id.quarterAddCourseSpinner),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        appCompatSpinner.perform(click());
//
//        DataInteraction appCompatCheckedTextView = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(5);
//        appCompatCheckedTextView.perform(click());
//
//        ViewInteraction appCompatEditText3 = onView(
//                allOf(withId(R.id.subjectAddCourseEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                3),
//                        isDisplayed()));
//        appCompatEditText3.perform(replaceText("CSE"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText4 = onView(
//                allOf(withId(R.id.numberAddCourseEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                4),
//                        isDisplayed()));
//        appCompatEditText4.perform(replaceText("110"), closeSoftKeyboard());
//
//        ViewInteraction appCompatSpinner2 = onView(
//                allOf(withId(R.id.sizeAddCourseSpinner),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                5),
//                        isDisplayed()));
//        appCompatSpinner2.perform(click());
//
//        DataInteraction appCompatCheckedTextView2 = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(3);
//        appCompatCheckedTextView2.perform(click());
//
//        ViewInteraction materialButton3 = onView(
//                allOf(withId(R.id.enterAddCourseButton), withText("Enter"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        materialButton3.perform(click());
//
//        ViewInteraction appCompatSpinner3 = onView(
//                allOf(withId(R.id.yearAddCourseSpinner),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatSpinner3.perform(click());
//
//        DataInteraction appCompatCheckedTextView3 = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(1);
//        appCompatCheckedTextView3.perform(click());
//
//        ViewInteraction appCompatSpinner4 = onView(
//                allOf(withId(R.id.quarterAddCourseSpinner),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        appCompatSpinner4.perform(click());
//
//        DataInteraction appCompatCheckedTextView4 = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(4);
//        appCompatCheckedTextView4.perform(click());
//
//        ViewInteraction appCompatEditText5 = onView(
//                allOf(withId(R.id.numberAddCourseEditText), withText("110"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                4),
//                        isDisplayed()));
//        appCompatEditText5.perform(replaceText("105"));
//
//        ViewInteraction appCompatEditText6 = onView(
//                allOf(withId(R.id.numberAddCourseEditText), withText("105"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                4),
//                        isDisplayed()));
//        appCompatEditText6.perform(closeSoftKeyboard());
//
//        ViewInteraction materialButton4 = onView(
//                allOf(withId(R.id.enterAddCourseButton), withText("Enter"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        materialButton4.perform(click());
//
//        ViewInteraction appCompatSpinner5 = onView(
//                allOf(withId(R.id.quarterAddCourseSpinner),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        appCompatSpinner5.perform(click());
//
//        DataInteraction appCompatCheckedTextView5 = onData(anything())
//                .inAdapterView(childAtPosition(
//                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
//                        0))
//                .atPosition(0);
//        appCompatCheckedTextView5.perform(click());
//
//        ViewInteraction appCompatEditText7 = onView(
//                allOf(withId(R.id.numberAddCourseEditText), withText("105"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                4),
//                        isDisplayed()));
//        appCompatEditText7.perform(click());
//
//        ViewInteraction appCompatEditText8 = onView(
//                allOf(withId(R.id.numberAddCourseEditText), withText("105"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                4),
//                        isDisplayed()));
//        appCompatEditText8.perform(replaceText("30"));
//
//        ViewInteraction appCompatEditText9 = onView(
//                allOf(withId(R.id.numberAddCourseEditText), withText("30"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                4),
//                        isDisplayed()));
//        appCompatEditText9.perform(closeSoftKeyboard());
//
//        ViewInteraction materialButton5 = onView(
//                allOf(withId(R.id.enterAddCourseButton), withText("Enter"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                6),
//                        isDisplayed()));
//        materialButton5.perform(click());
//
//        ViewInteraction materialButton6 = onView(
//                allOf(withId(R.id.doneAddCourseButton), withText("Done"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                7),
//                        isDisplayed()));
//        materialButton6.perform(click());
//
//        ViewInteraction materialButton13 = onView(
//                allOf(withId(R.id.startStopSessionMainButton), withText("Start"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                1),
//                        isDisplayed()));
//        materialButton13.perform(click());
//
//
//        ViewInteraction materialButton7 = onView(
//                allOf(withId(R.id.mockMessageMainButton), withText("Mock"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        materialButton7.perform(click());
//
//        ViewInteraction appCompatEditText10 = onView(
//                allOf(withId(R.id.userDetailMockNearbyMessageEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatEditText10.perform(replaceText("2,,,,\nBill,,,,\nhttps://lh3.googleusercontent.com/pw/AM-JKLXQ2ix4dg-PzLrPOSMOOy6M3PSUrijov9jCLXs4IGSTwN73B4kr-F6Nti_4KsiUU8LzDSGPSWNKnFdKIPqCQ2dFTRbARsW76pevHPBzc51nceZDZrMPmDfAYyI4XNOnPrZarGlLLUZW9wal6j-z9uA6WQ=w854-h924-no?authuser=0,,,,\n2021,FA,CSE,210,medium\n2022,WI,CSE,110,medium\n2022,SP,CSE,110,medium"), closeSoftKeyboard());
//
//        ViewInteraction materialButton8 = onView(
//                allOf(withId(R.id.enterMockNearbyMessageButton), withText("Enter"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                1),
//                        isDisplayed()));
//        materialButton8.perform(click());
//
//        ViewInteraction appCompatEditText11 = onView(
//                allOf(withId(R.id.userDetailMockNearbyMessageEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatEditText11.perform(click());
//
//        ViewInteraction appCompatEditText12 = onView(
//                allOf(withId(R.id.userDetailMockNearbyMessageEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatEditText12.perform(replaceText("3,,,,\nWill,,,,\nhttps://lh3.googleusercontent.com/pw/AM-JKLXQ2ix4dg-PzLrPOSMOOy6M3PSUrijov9jCLXs4IGSTwN73B4kr-F6Nti_4KsiUU8LzDSGPSWNKnFdKIPqCQ2dFTRbARsW76pevHPBzc51nceZDZrMPmDfAYyI4XNOnPrZarGlLLUZW9wal6j-z9uA6WQ=w854-h924-no?authuser=0,,,,\n2022,WI,CSE,110,medium\n2020,FA,CSE,12,medium\n2022,SP,CSE,110,medium"), closeSoftKeyboard());
//
//        ViewInteraction materialButton9 = onView(
//                allOf(withId(R.id.enterMockNearbyMessageButton), withText("Enter"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                1),
//                        isDisplayed()));
//        materialButton9.perform(click());
//
//        ViewInteraction appCompatEditText13 = onView(
//                allOf(withId(R.id.userDetailMockNearbyMessageEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatEditText13.perform(click());
//
//        ViewInteraction appCompatEditText14 = onView(
//                allOf(withId(R.id.userDetailMockNearbyMessageEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatEditText14.perform(replaceText("4,,,,\nDill,,,,\nhttps://lh3.googleusercontent.com/pw/AM-JKLXQ2ix4dg-PzLrPOSMOOy6M3PSUrijov9jCLXs4IGSTwN73B4kr-F6Nti_4KsiUU8LzDSGPSWNKnFdKIPqCQ2dFTRbARsW76pevHPBzc51nceZDZrMPmDfAYyI4XNOnPrZarGlLLUZW9wal6j-z9uA6WQ=w854-h924-no?authuser=0,,,,\n2022,WI,CSE,110,medium\n2020,FA,CSE,12,medium\n2022,SP,CSE,110,medium\n2021,SP,CSE,30,medium\n2021,FA,CSE,105,medium"), closeSoftKeyboard());
//
//        ViewInteraction materialButton10 = onView(
//                allOf(withId(R.id.enterMockNearbyMessageButton), withText("Enter"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                1),
//                        isDisplayed()));
//        materialButton10.perform(click());
//
//        ViewInteraction appCompatEditText15 = onView(
//                allOf(withId(R.id.userDetailMockNearbyMessageEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatEditText15.perform(click());
//
//        ViewInteraction appCompatEditText16 = onView(
//                allOf(withId(R.id.userDetailMockNearbyMessageEditText),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatEditText16.perform(replaceText("5,,,,\nJill,,,,\n,,,,\n2020,FA,CSE,120,medium\n2022,SP,CSE,110,medium"), closeSoftKeyboard());
//
//        ViewInteraction materialButton11 = onView(
//                allOf(withId(R.id.enterMockNearbyMessageButton), withText("Enter"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                1),
//                        isDisplayed()));
//        materialButton11.perform(click());
//
//        ViewInteraction materialButton12 = onView(
//                allOf(withId(R.id.button), withText("BACK"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(android.R.id.content),
//                                        0),
//                                2),
//                        isDisplayed()));
//        materialButton12.perform(click());
//
//
//        ViewInteraction textView = onView(
//                allOf(withId(R.id.nameUserRowTextView), withText("Dill (3)"),
//                        withParent(allOf(withId(R.id.personsRowsLayout),
//                                withParent(withId(R.id.sessionUsersMainRecyclerView)))),
//                        isDisplayed()));
//        textView.check(matches(withText("Dill (3)")));
//
//        ViewInteraction recyclerView = onView(
//                allOf(withId(R.id.sessionUsersMainRecyclerView),
//                        childAtPosition(
//                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
//                                0)));
